hphp/test/zend/bad/ext/soap/tests/soap12/T23.php
<?php
$HTTP_RAW_POST_DATA = <<<EOF
<?xml version='1.0' ?>
<env:Envelope xmlns:env="http://www.w3.org/2003/05/soap-envelope"> 
  <env:Header>
    <test:Unknown xmlns:test="http://example.org/ts-tests" 
          env:mustUnderstand="1">foo</test:Unknown>
    <test:echoOk xmlns:test="http://example.org/ts-tests" 
          env:mustUnderstand="wrong">foo</test:echoOk>
  </env:Header>
  <env:Body>
  </env:Body>
</env:Envelope>
EOF;
include "soap12-test.inc";
?>